# manimatio

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  flake.nix  justfile  vcpkg.json
.cache/clangd/index/: core.cpp.5A848F94F85A3687.idx  gfx.ixx.1219ADC130F442A9.idx  main.cpp.1244A1A0FDEB650A.idx  math.ixx.42B7367F8861A9A0.idx  math_ast.ixx.970EEFCBD2A6AC58.idx  math_expression.ixx.48EEAE7C28BFC78E.idx  math_exprops.ixx.D8A4A9FEC205D7FA.idx  math_nodes.ixx.AF4CFB80B5BD8612.idx  math_quaternion.ixx.C3BB4AF35E9823EF.idx  math_splines.ixx.7E54DC9919E7337D.idx  test.cpp.49E68897466B8063.idx  unit_test.cpp.B03FCDF7C4D66E25.idx
.direnv/: flake-profile-11-link  flake-profile-14-link  flake-profile-15-link  flake-profile-16-link  flake-profile-17-link  flake-profile-18-link  flake-profile-19-link  flake-profile-3-link  flake-profile-5-link  flake-profile-8-link  flake-profile-9-link
.github/workflows/: test.yaml
cmake/: AddCxxModuleLibraryAuto.cmake  AddCxxSnippets.cmake  AddCxxTests.cmake  EnableCrossLangLTO.cmake  LoadCxxLibs.cmake  SetupCatch.cmake
src/cpp/: core.cpp  main.cpp
src/cpp/bindings/python/: CMakeLists.txt  module.cpp
src/cpp/modules/cuda_ext/host_link/: CMakeLists.txt
src/cpp/modules/cuda_ext/project/: CMakeLists.txt  cuda_ext.cu
src/cpp/modules/cuda_ext/project/include/: cuda_ext.h
src/cpp/modules/cxxlibs/gfx/: CMakeLists.txt
src/cpp/modules/cxxlibs/gfx/modules/: gfx.ixx
src/cpp/modules/cxxlibs/gfx/snippets/: main.cpp
src/cpp/modules/cxxlibs/math/: CMakeLists.txt
src/cpp/modules/cxxlibs/math/modules/: math.ixx  math_ast.ixx  math_expression.ixx  math_exprops.ixx  math_node_desc.ixx  math_nodes.ixx  math_quaternion.ixx  math_splines.ixx
src/cpp/modules/cxxlibs/math/snippets/: test.cpp  unit_test.cpp
src/cpp/modules/cxxlibs/math/tests/: test_expr.cpp
src/cpp/modules/cxxlibs/smodel/: CMakeLists.txt
src/cpp/modules/cxxlibs/smodel/modules/: obj.ixx  smodel.ixx  sobj.ixx  util.ixx
src/rust/: Cargo.toml
src/rust/src/: esdt.rs  lib.rs  main.rs
