[package]
name = "manimatio_rust_lib"
version = "0.0.1"
edition = "2024"

[lib]
name = "manimatio_rust_lib"
crate-type = ["staticlib", "rlib"]

[dependencies]
cxx = "1"
typst = "0.14.2"
typst-svg = "0.14.2"
typst-kit = { version = "0.14.2", features = ["fonts", "embed-fonts"] }
serde_json = "1.0.114"
chrono = "0.4.35"
resvg = "0.45"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
